# learn_api_rust_postgres

./: .env  Cargo.toml  Rocket.toml  diesel.toml
src/: db.rs  main.rs  schema.rs
src/auth/: middleware.rs  mod.rs  token.rs
src/models/: api_response.rs  mod.rs  user.rs
src/models/user/: login_request.rs  mod.rs  user.rs  user_response.rs  user_tokens.rs
src/routes/: user.rs
src/routes/user/: api_create_user.rs  api_get_all_user.rs  api_get_user_by_id.rs  api_login.rs  api_update_user.rs  mod.rs
src/utils/: base_response.rs  hash_password.rs  mod.rs  verify_password.rs
