[package]
name = "learn_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0", features = ["serde", "v4"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "serde_json", "uuid", "chrono"] }
serde = { version = "1.0.215", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }



